force-app/main/default/objects/Connection__c/Connection__c.object-meta.xml
<CustomObject>
    <description>object that holds the connection win an external system</description>
    <label>Connection</label>
    <nameField>
        <label>Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>