force-app/main/default/objects/Connection__c/fields/External_System_Name__c.field-meta.xml
<CustomField>
    <fullName>External_System_Name__c</fullName>
    <description>holds the name of the external system</description>
    <label>External System Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>Odoo</fullName>
            </value>
            <value>
                <fullName>Cegide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>