force-app/main/default/objects/Connection__c/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Stores the Name of the Named Credential created via Apex</description>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>