force-app/main/default/objects/Connection__c/fields/named_credentials__c.field-meta.xml
<CustomField>
    <fullName>named_credentials__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>named credentials</label>
    <referenceTo>named_credentials__c</referenceTo>
    <relationshipLabel>Connections</relationshipLabel>
    <relationshipName>Connections</relationshipName>
    <type>Lookup</type>
</CustomField>