force-app/main/default/objects/Connection__c/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <label>Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OAuth 2.0</fullName>
            </value>
            <value>
                <fullName>Username / Password</fullName>
            </value>
            <value>
                <fullName>JWT</fullName>
            </value>
            <value>
                <fullName>No Authentication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>