force-app/main/default/objects/Connection__c/fields/Return__c.field-meta.xml
<CustomField>
    <fullName>Return__c</fullName>
    <description>Store any response from the test connection (or error message)</description>
    <label>Return</label>
    <type>TextArea</type>
</CustomField>