force-app/main/default/objects/Connection__c/validationRules/Require_NamedCredential_When_Connected.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_NamedCredential_When_Connected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Connected&quot;),
    ISBLANK(Named_Credential__c)
)</errorConditionFormula>
    <errorDisplayField>Named_Credential__c</errorDisplayField>
    <errorMessage>Named Credential is required when the connection status is set to Connected.</errorMessage>
</ValidationRule>